# django-modular

./: .gitignore  README.md  pyproject.toml  shell.nix
src/app_dashboard/: views.py
src/app_landing/: views.py
src/app_login/: views.py
src/app_user_settings/: urls.py  views.py
src/django_modules/: settings.py  urls.py
