[project]
name = "django_modular"
version = "0.1.0"
description = "Project belajar django yang modular"
authors = [
    {name = "evanarnanda", email = "evanarnanda@gmail.com"},
]
dependencies = [
    "django>=5.0.5",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"